# neural-optimiser

./: README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: planning.ipynb  tutorial.ipynb
src/ase_bfgs_batched/ase/: bfgs.py  dynamics.py  optimiser.py
src/ase_bfgs_batched/calculators/: __init__.py  _fairchem.py  _mace.py
src/ase_bfgs_batched/conformers/: __init__.py  _conformer.py  _conformer_batch.py
src/ase_bfgs_batched/optimisation/: bfgs.py
src/ase_bfgs_batched/optimise/: __init__.py  base.py  bfgs.py
src/neural_optimiser/calculators/: __init__.py  _fairchem.py  _mace.py  _rand.py  _random.py  base.py
src/neural_optimiser/conformers/: _conformer.py  _conformer_batch.py
src/neural_optimiser/optimise/: __init__.py  _base.py  _bfgs.py  base.py  bfgs.py
src/neural_optimiser/optimisers/: _bfgs.py
tests/: conftest.py
tests/calculators/: test_mace.py  test_rand.py
tests/conformers/: test_conformer.py  test_conformer_batch.py
tests/optimise/: test_base.py  test_bfgs.py
