[project]
name = "neural-optimiser"
description = "Batched optimisation algorithms for neural network potential driven molecular dynamics."
authors = [{name = "Ewan Wallace", email = "erw@wallace2.com"}]
license = "Apache-2.0"
dynamic = ["version"]
requires-python = ">=3.11"
readme = {file = "README.md", content-type = "text/markdown"}

dependencies = [
    "rdkit>=2025.3.6",
    "ase>=3.26.0",
    "numpy>=2.2.6",
    "loguru>=0.7.3",
    "universal-pathlib>=0.3.1",
    "torch_geometric>=2.7.0",
    "torch==2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pre-commit>=4.3.0",
]
mace = [
    "mace-torch>=0.3.14",
    "cuequivariance_torch>=0.7.0",
    "torch-cluster>=1.6.3",
]

[tool.uv]
no-build-isolation-package = ["torch-cluster"]

[project.urls]
Homepage = "https://github.com/erwallace/neural-optimiser"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools >= 65", "setuptools_scm[toml]>=6.2"]
build-backend = 'setuptools.build_meta'

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "UP", # pyupgrade
]

[tool.ruff]
line-length = 100

[tool.setuptools_scm]
local_scheme = "node-and-date"
search_parent_directories = true
version_scheme = "no-guess-dev"
